<resources>
    <array name="finance_types">
        <item>Income</item>
        <item>Expense</item>
    </array>

    <array name="investment_types">
        <item>Stocks</item>
        <item>FIIs</item>
        <item>Fixed Income</item>
    </array>

    <string name="app_name">Fit Finance</string>
    <string name="app_nameM" translatable="false">FIT FINANCE</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_finances">Finances</string>
    <string name="title_investments">Investments</string>
    <string name="txt_hint_email" translatable="false">E-mail</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_login" translatable="false">Login</string>
    <string name="txt_sign_in">Welcome to Fit Finance!</string>
    <string name="txt_forgot_password">Forgot your password?</string>
    <string name="txt_register">Register</string>
    <string name="pref_user_token">USER_TOKEN</string>
    <string name="pref_authentication_date_time">ACCESS_TIME</string>
    <string name="txt_remember_me">Remember me</string>
    <string name="pref_refresh_token" translatable="false">REFRESH_TOKEN</string>
    <string name="pref_refresh_date_time" translatable="false">REFRESH_TOKEN_DATE_TIME</string>
    <string name="pref_remember_me" translatable="false">BOOL_REMEMBER_ME</string>
    <string name="txt_hint_name">Name</string>
    <string name="txt_already_have_an_account">Already have an account? Do login!</string>
    <string name="txt_hint_cpf" translatable="false">CPF</string>
    <string name="txt_hint_phone">Phone Number</string>
    <string name="txt_hint_birthdate">Birthdate</string>
    <string name="txt_hint_income">Income</string>
    <string name="menu_logout_app">Logout</string>
    <string name="txt_action_logout">Are you sure you want to logout?</string>
    <string name="txt_register_user">Register User</string>
    <string name="txt_register_success">User registered successfully!</string>
    <string name="finance_view_details">View Details</string>
    <string name="edit_finance">Edit Finance</string>
    <string name="delete_finance">Delete Finance</string>
    <string name="more_options">More options</string>
    <string name="txt_hint_finance_name">Finance Name</string>
    <string name="txt_hint_finance_description">Description</string>
    <string name="txt_hint_finance_value">Value</string>
    <string name="txt_hint_finance_start_date">Start Date</string>
    <string name="txt_hint_finance_end_date">End Date</string>
    <string name="txt_hint_finance_type">Type</string>
    <string name="txt_finance_save">Save</string>
    <string name="txt_add_finance">Add Finance</string>
    <string name="txt_finance_start_date">Created at: %s</string>
    <string name="txt_finance_description">Description: %s</string>
    <string name="txt_finance_value">Value: $%.2f</string>
    <string name="txt_finance_end_date">End Date: %s</string>
    <string name="txt_delete_finance_title">Delete Finance</string>
    <string name="txt_delete_finance_message">Are you sure you want to delete this finance?</string>
    <string name="txt_error">Error</string>
    <string name="txt_invalid_birthdate_format">Invalid birthdate format</string>
    <string name="txt_session_expired">Session Expired</string>
    <string name="txt_session_expired_description">Your session has expired. Please log in again.</string>
    <string name="txt_deleting_finance">Deleting finance…</string>
    <string name="txt_loading_finances">Loading finances…</string>
    <string name="txt_add_investment">Add Investment</string>
    <string name="txt_loading_investments">Loading investments…</string>
    <string name="txt_deleting_investment">Deleting investment…</string>
    <string name="txt_investment_cost">Price: $%.2f</string>
    <string name="txt_investment_quantity">Quantity of Assets: %d</string>
    <string name="txt_delete_investment_title">Delete Investment</string>
    <string name="txt_delete_investment_message">Are you sure you want to delete this investment?</string>
    <string name="txt_authenticating_user">Authenticating user…</string>
    <string name="txt_refreshing_token">Validating login…</string>
    <string name="txt_hint_investment_cost">Unit Asset Price</string>
    <string name="txt_hint_investment_name">Investment Name</string>
    <string name="txt_hint_investment_quantity">Asset Quantity</string>
    <string name="txt_investment_type">Investment Type: %s</string>
    <string name="creating_investment">Creating investment…</string>
    <string name="updating_investment">Updating investment…</string>
    <string name="txt_edit_investment">Edit Investment</string>
    <string name="txt_delete_investment">Delete Investment</string>
    <string name="error_no_internet_connection">Oops! It looks like you\'re not connected to the internet, please try again when your connection has been reestablished.</string>
    <string name="error_unknown">Something went wrong. Please, try again later.</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_profile">Profile</string>
    <string name="txt_generic_decimal" translatable="false">$%.2f</string>
    <string name="txt_balance">Balance</string>
    <string name="txt_biggest_expense">Biggest Expense</string>
    <string name="txt_smallest_expense">Smallest Expense</string>
    <string name="txt_biggest_investment">Biggest Investment</string>
    <string name="txt_smallest_investment">Smallest Investment</string>
    <string name="txt_loading_home_data">Loading user data…</string>
    <string name="txt_details">Details</string>
    <string name="txt_expense">Expense</string>
    <string name="txt_balance_vs_expense">Balance vs Expense</string>
    <string name="menu_photo_gallery">Photo Gallery</string>
    <string name="profile_image">User Profile Image</string>
    <string name="txt_edit_user_info">Edit User Info</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_confirm_changes">Confirm Changes</string>
    <string name="txt_success">Success</string>
    <string name="txt_user_updated">User updated successfully!</string>
    <string name="txt_update_password">Update</string>
    <string name="txt_hint_new_password">New Password</string>
    <string name="txt_hint_old_password">Old Password</string>
    <string name="txt_changing_password">Changing Password…</string>
    <string name="txt_hint_new_password_confirmation">New Password Confirmation</string>
    <string name="txt_password_updated">Password updated successfully!</string>
    <string name="txt_confirm_change_password">Are you sure you want to change password? You will need to do login again.</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_action_filter">Filter</string>
    <string name="txt_filter">Filter List</string>
    <string name="txt_filter_by_name_asc">Sort by name</string>
    <string name="txt_custom_filter">Custom Filter</string>
    <string name="txt_filter_by_type_asc">Sort by type</string>
    <string name="txt_filter_category">Sort</string>
    <string name="txt_hide_category">Hide Category</string>
    <string name="txt_hide_stocks">Stocks</string>
    <string name="txt_hide_fiis" translatable="false">FIIs</string>
    <string name="txt_hide_fixed_income">Fixed Income</string>
    <string name="txt_about_us_title">What is Fit Finance?</string>
    <string name="txt_about_us_objective">Objective</string>
    <string name="txt_about_us_objective_description">Fit Finance was created to make a significant contribution to society by improving personal financial control, promoting financial education, encouraging transparency and responsibility, expanding financial inclusion and reducing financial waste.</string>
    <string name="txt_about_us_vision">Project Overview</string>
    <string name="txt_about_us_vision_description">The \"Fit Finance\" app is a tool designed to transform the way people manage their personal finances. With an intuitive interface and powerful features, this app offers a safe and efficient environment for complete control of finances. In addition, \"Fit Finance\" provides valuable insights through graphs, making it easier to understand individual financial trends. With the goal of promoting a healthy financial life, this app is an essential tool for those who want to avoid debt and achieve their financial goals with confidence and peace of mind.</string>
    <string name="txt_about_us_description">Fit Finance is a software that helps users understand their finances and investment portfolio more accurately, so that they can understand their financial movements, making it easier to see mistakes and successes, bringing greater control, all by simply adding their finances to the system.</string>
    <string name="txt_about_us_reserved_rights">All rights reserved to Fit Finance. This app and its content are protected by intellectual property laws. Unauthorized use is prohibited.</string>
    <string name="txt_mail" translatable="false">fitfinance@gmail.com</string>
    <string name="txt_instagram" translatable="false">www.instagram.com/fit-finance</string>
    <string name="txt_phone" translatable="false">+55 11 98932-0292</string>
    <string name="txt_linkedin" translatable="false">www.linkedin.com/in/fit-finance-1533</string>
    <string name="txt_contact">Contact</string>
    <string name="txt_photo_gallery">Photo Gallery</string>
    <string name="txt_invalid_credentials">Invalid credentials. Please, review the data provided.</string>
    <string name="error_service_unavailable">At moment, the service is unavailable. Please, try again later.</string>
    <string name="txt_required">cannot be empty!</string>
    <string name="txt_password_required">must be at least 8 characters, include uppercase, lowercase, and number</string>
    <string name="txt_cpf_required">Invalid %1$s format (e.g., 123.456.789–00)</string>
    <string name="txt_phone_required">Invalid %1$s format (e.g., (12) 91234–5978)</string>
    <string name="txt_item_image">Item Image</string>
    <string name="txt_loading">Loading…</string>

</resources>