<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fitfinance.app.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_finances"
        android:name="com.fitfinance.app.presentation.ui.financedashboard.FinanceDashboardFragment"
        android:label="@string/title_finances"
        tools:layout="@layout/fragment_finance_list" />

    <fragment
        android:id="@+id/navigation_investments"
        android:name="com.fitfinance.app.presentation.ui.investmentdashboard.InvestmentDashboardFragment"
        android:label="@string/title_investments"
        tools:layout="@layout/fragment_investment_list" />
</navigation>