<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_geral">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_contact"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/box_color"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawableTint="@color/white"
                android:drawablePadding="8dp"
                android:text="@string/txt_mail"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/ic_instagram"
                android:drawableTint="@color/white"
                android:drawablePadding="8dp"
                android:text="@string/txt_instagram"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableTint="@color/white"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_linkedin"
                android:text="@string/txt_linkedin"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableTint="@color/white"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_phone"
                android:text="@string/txt_phone"
                android:textColor="@color/white"
                android:textSize="16sp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>